# project-RAG

./: LICENSE  README.md  pyproject.toml  requirements.txt
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdfLoader.ipynb
src/: embedding.py  search.py  vectorstore.py
